# fc

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  check-code.sh  lambda.md  modulefile.template  package-module.sh  proto_config.yaml  pylintrc  pyproject.toml  runtests.py  setup.cfg  setup.py  versioneer.py
.github/workflows/: publish-pypi.yml  release.yaml  tests.yaml
config/: ls5_fc.yaml  ls5_fc_albers.yaml  ls5_fc_tif.yaml  ls7_fc.yaml  ls7_fc_albers.yaml  ls7_fc_tif.yaml  ls8_fc_albers.yaml  ls8_fc_albers_tif.yaml  ls8_fc_tif.yaml  s2_fc_albers.yaml
fc/: _version.py  endmembers.py  fc_app.py  fractional_cover.py  unmiximage_fallback.py  virtualproduct.py  vproducts_experiments.ipynb  worker.py
fc/new/: proto_config.yaml  virtualproduct.py  wofs.yaml  worker.py
fc/unmix/: Makefile  unmiximage.f90  unmiximage.pyf  unmiximage_wrapper.c
scripts/: celery.sh  datacube-fc  datacube-fc-launcher  distributed.sh
tests/: conftest.py  test_fractional_cover.py
tests/data/: fc.nc  sr.nc
validation/: Data finder.ipynb  Dude, where's my landsat?.ipynb  FC_Test.ipynb  FC_Test_water_masking.ipynb  NBART_Fieldsites-Copy1.ipynb  NBART_Fieldsites-Fractional Cover.ipynb  NBART_Fieldsites-Missing-values.ipynb  NBART_Fieldsites.ipynb  NBAR_Fieldsites-Old_endmembers-Fractional Cover.ipynb  jrsrp_20170430.csv  missing_nbart_fieldsites.csv  missing_nbart_scenes.txt  nbar_fieldsites_with_old_endmembers.csv  nbart_fieldsites.csv  nbart_fieldsites_with_new_endmembers.csv
